# HXLX

./: .gitignore  Makefile  README.md  admonish.toml  book.toml  panzoom-bundle.js  rainbow-coding.sh
.github/workflows/: deploy.yml
mdbook-mermaid-panzoom/: Cargo.toml
plugins/hxbook-admonish/: Cargo.toml  README.md
plugins/hxbook-admonish/assets/: hxbook-admonish.css
plugins/hxbook-admonish/src/: config.rs  lib.rs  main.rs  markdown.rs  parse.rs  render.rs  types.rs
plugins/mdbook-components/: Cargo.toml  README.md
plugins/mdbook-components/assets/: Component.js  ComponentRegistry.js  Components.js  HydrationManager.js  mdbook-components.js
plugins/mdbook-components/components/admonition/: control.js  view.css
plugins/mdbook-components/components/example/: control.js  model.html  view.css
plugins/mdbook-components/src/: CacheManager.rs  asset_generator.rs  diff.rs  errors.rs  hydration.rs  hydration_queue.rs  lib.rs  main.rs  parser.rs  performance.rs  preprocessor.rs  registry.rs  templates.rs  unocss_manager.rs
plugins/mdbook-components/src/components/admonition/: control.js  model.html  view.css
plugins/mdbook-components/src/components/example/: model.html
plugins/mdbook-components/templates/: admonition.html
plugins/mdbook-mermaid-panzoom/: Cargo.toml  Makefile  README.md
plugins/mdbook-mermaid-panzoom/assets/: panzoom-bundle.js  panzoom.css
plugins/mdbook-mermaid-panzoom/src/: lib.rs  main.rs
scribbles/utils/: Component.js  Matrix.js  SVGPanZoom.js
src/: 00-Drafts.md  00-Manual.md  01-Manifest.md  01-Prelude.md  02-Motive.md  03-Core.md  03-Micro.md  04-Mini.md  04-Model.md  05-Macro.md  05-Method.md  05-Moat.md  06-Macro.md  06-Matter.md  06-Method.md  07-Matter.md  07-Method.md  07-Vision.md  08-Mode.md  08-Strategy.md  09-Meta.md  09-Models.md  09-Value.md  10-HLX.md  10-Manual.md  11-Drafts.md  11-Morphs.md  HLX-08.md  HLX-26.md  HLX-Abstract.md  HLX-Dags.md  HLX-Meta.md  HLX-Morphs.md  HLX-Play.md  SUMMARY.md  XpX08.md  XpXDef.md  chapter_1.md  chapter_2.md  chapter_4.md
src/HLX/: HLX-Gadr.md  HLX-Meta.md  HLX-Scoring.md  HX-05.md  HX-11.md  HX-26.md  LX-B00T.md  LX-Z00S.md  LXC-Classes.md  LXQ-10.md  LXQ-19.md  LXQ-30.md  LXQ-31.md  LXQ-41.md  QLX-00.md  QLXTM.md
src/appendix/models/: chatgpt.md  grok.md
src/archive/data/: C90.json  color-01.json  color-02.json
src/assets/icons/: attributions.md
src/dags/: D04.md  D07.md
src/includes/dags/: D04.md  D0K.md
src/includes/models/: chatgpt.md  deepseek.md  gemini.md
src/static/css/: background.css  general.css  glass.css  glassmorphic.css  hxlx-variables.css  icons.css  morph.css  morphs.html  panzoom.css  variables.css
src/static/fonts/: fonts.css
src/static/img/: crystal.avif
src/static/js/: alpine-init.js  color-table.js  display.js  mermaid-panzoom.js  three-init.js  three-init2.js
src/static/js/addons/textures/: lottie-logo-animation.json
theme/: index.hbs
theme/css/: general.css  panzoom.css
theme/fonts/: fonts.css
theme/js/: panzoom-bundle.js
