# /home/enzi/HXLX/plugins/hxbook-admonish/Cargo.toml
[package]
name = "hxbook-admonish"
version = "0.1.1"
edition = "2021"
authors = ["Nihad Nagi"]
description = "mdBook preprocessor for Material Design styled admonitions with local assets"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "cargo"] }
env_logger = "0.10"
log = "0.4"
mdbook = "0.4.52"
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
toml_edit = "0.14"

[dev-dependencies]
tempfile = "3.10"

[lib]
name = "hxbook_admonish"
path = "src/lib.rs"

[[bin]]
name = "hxbook-admonish"
path = "src/main.rs"
