[package]
name = "mdbook-components"
version = "0.1.0"
edition = "2021"
description = "mdBook preprocessor for custom components with MVC architecture"
authors = ["Your Name"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/mdbook-components"
readme = "README.md"

[[bin]]
name = "mdbook-components"
path = "src/main.rs"

[lib]
name = "mdbook_components"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "cargo"] }
env_logger = "0.10"
log = "0.4"
mdbook = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.3"
toml = "0.8"
toml_edit = "0.19"
uuid = { version = "1.0", features = ["v4", "serde"] }
pulldown-cmark = "0.9"
html-escape = "0.2"
once_cell = "1.19"
thiserror = "1.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.3"
