[package]
name = "mdbook-components"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
mdbook = "0.4"
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
thiserror = "1.0"
toml = "0.5"  # Changed to match mdbook's version
uuid = { version = "1.0", features = ["v4", "serde"] }

[lib]
name = "mdbook_components"
path = "src/lib.rs"

[[bin]]
name = "mdbook-components"
path = "src/main.rs"
