[package]
name = "mdbook-components"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
mdbook = "0.5.2"
mdbook-preprocessor = "0.5.2"
pulldown-cmark = { version = "0.10.0", default-features = false, features = ["html"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
thiserror = "1.0"
toml = "0.8.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

# For TOML editing during install
toml_edit = { version = "0.15", default-features = false }

[package]
name = "mdbook-mermaid-panzoom"
version = "0.1.0"
edition = "2024"
description = "mdBook preprocessor with pan/zoom support for mermaid diagrams"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
name = "mdbook_mermaid_panzoom"
path = "src/lib.rs"

[[bin]]
name = "mdbook-mermaid-panzoom"
path = "src/main.rs"

[dependencies]
mdbook = { version = "0.5", optional = true }
pulldown-cmark = { version = "0.10", default-features = false }
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["cargo", "derive"] }
serde_json = "1.0"
toml_edit = "0.15"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "1.0"
tempfile = "3.3"
