[package]
name = "mdbook-mermaid-panzoom"
version = "0.1.0"
edition = "2024"

[dependencies]
mdbook = "0.4.52"
mdbook-preprocessor = "0.5.2"
pulldown-cmark = { version = "0.10.0", default-features = false }
env_logger = "0.11.8"
log = "0.4.11"
clap = { version = "4.0.29", features = ["cargo", "derive"] }
serde_json = "1.0.57"
toml_edit = { version = "0.15.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "1.0"
tempfile = "3.3.0"
