[package]
name = "mdbook-mermaid-panzoom"
version = "0.2.4"
edition = "2024"
description = "mdBook preprocessor with pan/zoom support for mermaid diagrams"
authors = ["Nihad Nagi nihads.nagis@gmail.com"]
license = "MIT OR Apache-2."
readme = "README.md"

[lib]
name = "mdbook_mermaid_panzoom"
path = "src/lib.rs"


[[bin]]
name = "mdbook-mermaid-panzoom"
path = "src/main.rs"

[dependencies]
mdbook-preprocessor = "0.5.2"
pulldown-cmark = { version = "0.10", default-features = false }
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["cargo", "derive"] }
serde_json = "1.0"
toml_edit = "0.15"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "1.0"
tempfile = "3.3"
